# cources

02/build-static_lib-Def-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  static_lib.cbp
02/build-static_lib-Def-Debug/static_lib_autogen/: moc_predefs.h
02/static_lib/: CMakeLists.txt  main.cpp
basic_render/: CMakeLists.txt
basic_render/include/: buffer_actions.h  file_actions.h  includes.h  math_impl.h  screen.h  tests.h
basic_render/src/: main.cpp  screen.cpp  tests.cpp
build-loop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  loop_with_keyboard.cbp
loop_with_keyboard/: CMakeLists.txt
loop_with_keyboard/src/: main.cpp
shared_lib/: CMakeLists.txt
static_lib/: CMakeLists.txt  main.cpp
